style/applied/_viewer.scss
.section.viewer {
    padding-bottom:512px; // Extra space so sticky viewer stays on screen
    
    section.snap {
        -webkit-scroll-snap-align: start !important;
                scroll-snap-align: start !important;
        -webkit-scroll-snap-stop: always !important;
                scroll-snap-stop: always !important;
    }
    
    section.snap {
        transition: var(--motion-duration-fast) var(--motion-easing);
        transition-property: filter opacity;
        
        padding-top: calc(
            50vh + var(--snap-section-padding-top-mobile-offset)
        );
        &:nth-child(2){
            margin-top: calc(50vh + 256px);
        }
        margin-bottom: 64px;
        @media screen and (min-width: $bp-single-col) {
            padding-top: var(--snap-section-padding-top);
            margin-bottom: 128px;
            
            &:nth-child(2) {
                padding-top: 48px;
                margin-top: 0px;
            }
        }
        
        p {
            position: relative;
            z-index: 1;
        }
        
        &.focused {
            // opacity: 1;
        }
        &.defocused {
            opacity: .125;
        }       

        @media screen and (min-width: $bp-single-col) {
            // &.defocused:not(:nth-child(2))/
              
            &.defocused {
                opacity: .125;
                // filter: saturate(0);
                // font-family: redaction-100;
                img {
                }            
                p:first-of-type:before {
                    opacity: 0;
                }            
            }
            
            p:first-of-type:before {
                content: " ";
                position: absolute;
                left: -24px;
                top: 24px;
                height: 18px;
                width: 18px;
                display: block;
                z-index: 2000;
                
                -webkit-mask-image: url(/icons/arrow-right.svg);
                        mask-image: url(/icons/arrow-right.svg);
                -webkit-mask-repeat: no-repeat;
                        mask-repeat: no-repeat;
                -webkit-mask-size: 100% 100%;
                        mask-size: 100% 100%;
                -webkit-mask-position: left bottom;
                        mask-position: left bottom;
                background-color: var(--gray-100);
                opacity: 1;
                            
                transition: var(--motion-duration-med) var(--motion-easing);
                transition-property: opacity;
                
            }
        }
    }
    a.metadata.set_current {
        width: fit-content;
    }

    .canvas-container {
        position: relative;
        
    }
    .district-viewer {
        text-align: center;
    }

    .view_count {
        @extend .cursor-pointer;
    }

    .zero_warning {
        @extend .cursor-pointer;
        position: absolute;
        top: 0px;
        width: 100%;
    }
    svg.dist_chart {
        overflow: visible;
    }
}


/*
Chrome requires that scroll snapping be applied to <html>
@media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution:.001dpcm) {
*/
/*
html {
    -webkit-scroll-snap-type: y proximity;
            scroll-snap-type: y proximity;

    
//  Weird hacks to make vertical spacing same on Safari and Chrome
    --snap-section-padding-top: 192px;
    --snap-section-padding-top-mobile-offset: 16px;

    * {
        -webkit-scroll-snap-type:   none; 
                scroll-snap-type:   none; 
        -webkit-scroll-snap-align:  none;
                scroll-snap-align:  none;
    }
}
*/

/*
Safari requires that scroll snapping be applied to <body>
*/
/*
@media not all and (min-resolution:.001dpcm) { 
    body {
        -webkit-scroll-snap-type: y proximity;
                scroll-snap-type: y proximity;
        
    //  Weird hacks to make vertical spacing same on Safari and Chrome
        --snap-section-padding-top: 128px;
        --snap-section-padding-top-mobile-offset:
            calc(var(--snap-section-padding-top) * -1);
        
        * {
            -webkit-scroll-snap-align:  none;
                    scroll-snap-type:   none; 
            -webkit-scroll-snap-type:   none; 
                    scroll-snap-align:  none;
        }
        
    //  On Safari, the first snap section needs more top padding 
        .section.viewer section.snap:nth-of-type(1) {
            --snap-section-padding-top: 112px;
        }
    }
}
*/
.viewer-track {
    grid-column: var(--grid-column-left);
    //     border: 1px solid lime;
    position: absolute;
    top: -64px;
    left:   calc(var(--grid-outer-gap-l) * -1);
    right:  calc(var(--grid-outer-gap-r) * -1);
    bottom: 64px;
    z-index: 2;
    pointer-events: none;
    
    .viewer-container {
        height: 50vh; // Temporary, to keep text visible
        width: 100%;
        position: -webkit-sticky;
        position: sticky;
        top: 0;
        box-shadow: var(--box-shadow);
        overflow: hidden;        
        background: var(--gray-10);
        
        @media screen and (min-width: $bp-single-col) {
            background: none;
            height: auto;
            top: 64px;
            box-shadow: none;
        }
        .parcoords {
            // position: relative;
            transition: var(--motion-duration-med) var(--motion-easing);
            transition-property: opacity;
            text-transform: capitalize;
            text-align: initial;
            width:100%;
            height:164px;
            margin-top: 16px;
            @media screen and (min-width: $bp-single-col) {
                margin-top: 0px;
                margin-bottom: 10px;
                // display: block;
            }
        }
        .canvas-container {
            // width: 100%;
            @extend .cursor-pointer;
            text-align: center;
        }
        .view_count {
            text-align: center;
        }
    }
    @media screen and (min-width: $bp-single-col) {
        top: 0;
        left: 0;
        right: 0;
        pointer-events: auto;
    }
    
}

@media screen and (min-width: $bp-single-col) {
    .main_canvas  {
        height: 40vw;
        max-height: calc(90vh - 300px);
    }
}
@media only screen and (max-width: 1400px) {
    .viewer_row {
        .district-viewer {
            canvas.main_canvas {
                max-width: 96%;
                max-height: 48vh;
            }
        }
    }
}

